# xxhash-rs

./: Cargo.toml  README.md
extra/: pyhelper.py
src/: lib.rs  main.rs
src/modular/: mod.rs  modular_u32.rs  modular_u64.rs
src/xxh_32/: acc.rs  acc1.rs  acc4.rs  digest.rs  mod.rs  primes.rs  tests.rs
src/xxh_64/: acc.rs  acc1.rs  acc4.rs  digest.rs  mod.rs  primes.rs  tests.rs
